[gd_scene load_steps=2 format=3 uid="uid://xkgrb40rb8x"]

[ext_resource type="Script" uid="uid://db01upv064u6i" path="res://session_connector.gd" id="1_o4d5p"]

[node name="SessionConnector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4d5p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelStatus" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Server Status: Not Connected"
horizontal_alignment = 1

[node name="LabelAvailableSessions" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Available Sessions:"

[node name="HBoxSessions" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelNoSessions" type="Label" parent="VBoxContainer/HBoxSessions"]
unique_name_in_owner = true
layout_mode = 2
text = "No sessions available :("

[node name="Spacer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "
"

[node name="Label_Create_New_Session" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Create New Session:"

[node name="HBoxCreateSession" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxCreateSession"]
layout_mode = 2
text = "Session Name:"

[node name="LineEditSessionName" type="LineEdit" parent="VBoxContainer/HBoxCreateSession"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Fun Game Session 1"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxCreateSession"]
layout_mode = 2
text = "   Map:"

[node name="MapSelector" type="OptionButton" parent="VBoxContainer/HBoxCreateSession"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Map1"
popup/item_0/id = 0
popup/item_1/text = "Map2"
popup/item_1/id = 1

[node name="ButtonCreateSession" type="Button" parent="VBoxContainer/HBoxCreateSession"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Create New Session"

[node name="TimerConnect" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="SessionSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://di0kvimdenmnx")
spawn_path = NodePath("../VBoxContainer/HBoxSessions")

[connection signal="pressed" from="VBoxContainer/HBoxCreateSession/ButtonCreateSession" to="." method="_request_session"]
[connection signal="timeout" from="TimerConnect" to="." method="_try_connecting_to_server"]
[connection signal="despawned" from="SessionSpawner" to="." method="_on_session_spawner_despawned"]
[connection signal="spawned" from="SessionSpawner" to="." method="_on_session_spawner_spawned"]
